poc/tests/errors/test_FplVariableAlreadyDeclared_class_07.fpl
Test.Namespace
{
    theory
    {
        class Nat: obj
        {
            x: Nat

            optional pred TestProperty()
            {
                x: Int
                true
            }
        }
    }
}

##############################

FplVariableAlreadyDeclared:11:17: The name 'x' was already declared in the current context at (7,13)